Java17 changes (#398)
* initial changes

* Testing gradle changes

* Commented tests

* Updated gradle file

* Updated gradle version to 8.4

* Added duplicate strategy

* Updated gradle

* Updated the rpm dependency

* Updated java version in Dockerfile

* Testing build directory

* Reverted gradle changes

* Updated dockerUtil and build.gradle

* Updated ci yaml

* Updated gradle build files

* Updated build gradle file

* Commented gradle build step

* testing pacakge

* Fiddling with github actions

* Uncommented the tests in ci

* Updated ci yaml

* Testing packagecloud

* Uncommented code

* Updated tests using junit5

* Updated tests

* Updated APiHandlerTests

* Updated tests

* Updated tests

* Commented azure yaml

* Disabled configuration tests

* Added or condition in testGetDeviceArchType

---------

Co-authored-by: Saeid Rezaei Baghbidi <srbaghbidi@yahoo.com>