@@ -1,27 +1,30 @@
 plugins {
-    id "com.github.johnrengelman.shadow"
+    id 'com.github.johnrengelman.shadow' version '8.1.1'
     id 'jacoco'
 }
 
 description = 'iofog-agent-daemon'
 
 dependencies {
-    compile 'com.github.docker-java:docker-java:3.2.5'
-    compile 'io.netty:netty-all:4.1.34.Final'
-    compile 'org.jboss.logmanager:jboss-logmanager:2.0.3.Final'
-    compile 'com.jcraft:jsch:0.1.55'
-    compile 'com.fasterxml.jackson.core:jackson-databind:2.8.7'
-    compile 'org.apache.httpcomponents:httpmime:4.5.7'
-    compile 'junit:junit:4.12'
-    compile 'com.github.oshi:oshi-core:3.13.0'
-    compile 'org.slf4j:slf4j-nop:1.7.13'
-    compile 'org.apache.qpid:qpid-jms-client:0.52.0'
-    compile 'javax.json:javax.json-api:1.1.4'
-    compile 'org.glassfish:javax.json:1.1.4'
-    testCompile 'org.mockito:mockito-core:2.9.0'
-    testCompile 'org.powermock:powermock-module-junit4:2.0.2'
-    testCompile 'org.powermock:powermock-api-mockito2:2.0.2'
-    testCompile 'org.powermock:powermock-core:2.0.2'
+    implementation 'com.github.docker-java:docker-java:3.3.4'
+    implementation 'io.netty:netty-all:4.1.95.Final'
+    implementation 'org.jboss.logmanager:jboss-logmanager:3.0.0.Final'
+    implementation 'com.jcraft:jsch:0.1.55'
+    implementation 'com.fasterxml.jackson.core:jackson-databind:2.15.1'
+    implementation 'org.apache.httpcomponents:httpmime:4.5.7'
+    implementation 'org.junit.jupiter:junit-jupiter-api:5.10.0'
+    implementation 'com.github.oshi:oshi-core:6.4.0'
+    implementation 'org.slf4j:slf4j-nop:2.0.7'
+    implementation 'org.apache.qpid:qpid-jms-client:2.4.0'
+    implementation 'javax.json:javax.json-api:1.1.4'
+    implementation 'org.glassfish:javax.json:1.1.4'
+    testImplementation 'org.mockito:mockito-core:5.4.0'
+    testImplementation 'org.mockito:mockito-junit-jupiter:3.11.1'
+    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.10.0'
+    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.10.0'
+    testImplementation 'org.junit.jupiter:junit-jupiter:5.10.0'
+    testRuntimeOnly("org.junit.platform:junit-platform-launcher")
+    testImplementation 'org.testng:testng:7.7.0'
 }
 
 processResources {
@@ -31,9 +34,15 @@ processResources {
 build {
     dependsOn shadowJar
 }
+test {
+    jvmArgs '--add-opens=java.base/java.util=ALL-UNNAMED', '--add-opens=java.base/java.util.stream=ALL-UNNAMED', '--add-opens=java.base/java.lang=ALL-UNNAMED'
+    useJUnitPlatform()
+}
 
-task copyJar(type: Copy) {
-    from ("$buildDir/libs/") {
+tasks.register('copy', Copy)
+copy {
+    duplicatesStrategy = DuplicatesStrategy.EXCLUDE
+    from('build/libs/') {
         include "*-all.jar"
     }
     into file('../packaging/iofog-agent/usr/bin/')
@@ -46,47 +55,48 @@ jar {
 }
 
 jacoco {
-    toolVersion = "0.8.4"
+    toolVersion = "0.8.11"
 }
 
-jacocoTestReport {
-    reports {
-        xml.enabled true
-        csv.enabled true
-        html.destination file("${buildDir}/reports/jacocoHtml")
-        csv.destination file("${buildDir}/reports/jacoco/jacoco.csv")
-    }
-}
-
-project.ext.jacocoOfflineSourceSets = [ 'main' ]
-task doJacocoOfflineInstrumentation(dependsOn: [ classes, project.configurations.jacocoAnt ]) {
-    inputs.files classes.outputs.files
-    File outputDir = new File(project.buildDir, 'instrumentedClasses')
-    outputs.dir outputDir
-    doFirst {
-        project.delete(outputDir)
-        ant.taskdef(
-                resource: 'org/jacoco/ant/antlib.xml',
-                classpath: project.configurations.jacocoAnt.asPath,
-                uri: 'jacoco'
-        )
-        def instrumented = false
-        jacocoOfflineSourceSets.each { sourceSetName ->
-            if (file(sourceSets[sourceSetName].java.outputDir).exists()) {
-                def instrumentedClassedDir = "${outputDir}/${sourceSetName}"
-                ant.'jacoco:instrument'(destdir: instrumentedClassedDir) {
-                    fileset(dir: sourceSets[sourceSetName].java.outputDir, includes: '**/*.class')
-                }
-                sourceSets.test.runtimeClasspath -= files(sourceSets[sourceSetName].java.outputDir)
-                sourceSets.test.runtimeClasspath += files(instrumentedClassedDir)
-                instrumented = true
-            }
-        }
-        if (instrumented) {
-            test.jvmArgs += '-noverify'
-        }
-    }
-}
-
-test.dependsOn(doJacocoOfflineInstrumentation)
-test.finalizedBy jacocoTestReport
+//jacocoTestReport {
+//    reports {
+//        xml.required = true
+//        csv.required = true
+//        html.outputLocation file(layout.buildDirectory.dir("reports/jacocoHtml"))
+//        csv.outputLocation file(layout.buildDirectory.dir("reports/jacoco/jacoco.csv"))
+//    }
+//}
+//project.ext.jacocoOfflineSourceSets = [ 'main' ]
+//task doJacocoOfflineInstrumentation(dependsOn: [ classes, project.configurations.jacocoAnt ]) {
+//    inputs.files classes.outputs.files
+//    File outputDir = new File(project.buildDir, 'instrumentedClasses')
+//    outputs.dir outputDir
+//    doFirst {
+//        project.delete(outputDir)
+//        ant.taskdef(
+//                resource: 'org/jacoco/ant/antlib.xml',
+//                classpath: project.configurations.jacocoAnt.asPath,
+//                uri: 'jacoco'
+//        )
+//        def instrumented = false
+//        jacocoOfflineSourceSets.each { sourceSetName ->
+//            sourceSets[sourceSetName].output.classesDirs.each { classDir ->
+//                if (file(classDir).exists()) {
+//                    def instrumentedClassedDir = "${outputDir}/${sourceSetName}"
+//                    ant.'jacoco:instrument'(destdir: instrumentedClassedDir) {
+//                        fileset(dir: classDir, includes: '**/*.class')
+//                    }
+//                    sourceSets.test.runtimeClasspath -= files(classDir)
+//                    sourceSets.test.runtimeClasspath += files(instrumentedClassedDir)
+//                    instrumented = true
+//                }
+//            }
+//        }
+//        if (instrumented) {
+//            test.jvmArgs += '-noverify'
+//        }
+//    }
+//}
+//
+//test.dependsOn(doJacocoOfflineInstrumentation)
+//test.finalizedBy jacocoTestReport
